--- a/index.html
+++ b/index.html
@@ -32,19 +32,21 @@
           </div>
         </div>
         <img class="menu-open" src="assets/12.svg" alt="icon" />
-        <div class="header-menu">
-          <div>
-            <img src="assets/29.svg" alt="icon" />
-            <img class="menu-close" src="assets/13.svg" alt="icon" />
-          </div>
-          <div>
-            <a href="#">Events</a>
-            <a href="#">Forum</a>
-            <a href="#">Articles</a>
-            <a href="#">Podcasts</a>
-            <a href="#">Jobs</a>
-            <button>Login</button>
-            <button>Sign up</button>
+        <div class="header-overlay">
+          <div class="header-menu">
+            <div class="header-menu__top">
+              <img src="assets/29.svg" alt="icon" />
+              <img class="menu-close" src="assets/13.svg" alt="icon" />
+            </div>
+            <div class="header-menu__items">
+              <a href="#">Events</a>
+              <a href="#">Forum</a>
+              <a href="#">Articles</a>
+              <a href="#">Podcasts</a>
+              <a href="#">Jobs</a>
+              <button>Login</button>
+              <button>Sign up</button>
+            </div>
           </div>
         </div>
       </div>
