responsive du header-menu

--- a/index.html
+++ b/index.html
@@ -39,13 +39,17 @@
               <img class="menu-close" src="assets/13.svg" alt="icon" />
             </div>
             <div class="header-menu__items">
-              <a href="#">Events</a>
-              <a href="#">Forum</a>
-              <a href="#">Articles</a>
-              <a href="#">Podcasts</a>
-              <a href="#">Jobs</a>
-              <button>Login</button>
-              <button>Sign up</button>
+              <ul>
+                <a href="#">Events</a>
+                <a href="#">Forum</a>
+                <a href="#">Articles</a>
+                <a href="#">Podcasts</a>
+                <a href="#">Jobs</a>
+              </ul>
+              <div>
+                <button>Login</button>
+                <button>Sign up</button>
+              </div>
             </div>
           </div>
         </div>
