--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="hero__container">
         <img src="assets/6.svg" class="hero-illustration" alt="illustration" />
         <div class="hero-text">
-          <div>
+          <div class="hero-text__top">
             <h1>A community open to everyone</h1>
             <p>
               Flutter Cameroon is an initiative to focus the efforts of many
@@ -71,7 +71,7 @@
               <button>Visit forum</button>
             </div>
           </div>
-          <div>
+          <div class="hero-text__bottom">
             <div>
               <h3>106k</h3>
               <span>Members on Meetup</span>
