--- a/index.html
+++ b/index.html
@@ -116,7 +116,39 @@
         </div>
       </div>
     </div>
-
+    <footer class="footer">
+      <div class="footer-links">
+        <div class="footer__container">
+          <div class="footer-links__item"></div>
+          <div class="footer-links__item"></div>
+          <div class="footer-links__item"></div>
+          <div class="footer-links__item"></div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="footer__container">
+          <p>
+            © 2022 - 2023 Flutter Cameroon. All rigths reserved - Design by
+            <a href="https://twitter.com/mbagnajohan">MBAGNA Johan</a> - Coded
+            by <a href="https://leonelngoya.com">Leonel NGOYA</a>
+          </p>
+          <div>
+            <a href="#">
+              <img src="assets/10.svg" alt="icon">
+            </a>
+            <a href="#">
+              <img src="assets/26.svg" alt="icon">
+            </a>
+            <a href="#">
+              <img src="assets/28.svg" alt="icon">
+            </a>
+            <a href="#">
+              <img src="assets/30.svg" alt="icon">
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script>
       var elms = document.getElementsByClassName("splide");
       for (var i = 0; i < elms.length; i++) {
