animation hero section

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
           </div>
         </div>
         <div class="hero-image tablet">
-          <img src="assets/1.jpeg" alt="image" />
+          <img class="hero-image_1" src="assets/1.jpeg" alt="image" />
           <div>
-            <img src="assets/2.jpeg" alt="image" />
-            <img src="assets/3.jpeg" alt="image" />
+            <img class="hero-image_2" src="assets/2.jpeg" alt="image" />
+            <img class="hero-image_3" src="assets/3.jpeg" alt="image" />
           </div>
-          <img src="assets/4.jpeg" alt="image" />
+          <img class="hero-image_4" src="assets/4.jpeg" alt="image" />
         </div>
         <div class="hero-image mobile">
           <section class="splide" aria-label="hero image mobile">
