--- a/index.html
+++ b/index.html
@@ -119,10 +119,54 @@
     <footer class="footer">
       <div class="footer-links">
         <div class="footer__container">
-          <div class="footer-links__item"></div>
-          <div class="footer-links__item"></div>
-          <div class="footer-links__item"></div>
-          <div class="footer-links__item"></div>
+          <div class="footer-links__item">
+            <h3>Resources</h3>
+            <ul>
+              <a href="#">Become a sponsor</a>
+              <a href="#">Call for Speakers</a>
+              <a href="#">About</a>
+              <a href="#">Podcasts</a>
+              <a href="#">Jobs</a>
+              <a href="#">Branding</a>
+            </ul>
+            <div>
+              <a href="#">
+                <img src="assets/25.svg" alt="icon">
+                <span>Slack</span>
+              </a>
+              <a href="#">
+                <img src="assets/27.svg" alt="icon">
+                <span>Telegram</span>
+              </a>
+            </div>
+          </div>
+          <div class="footer-links__item">
+            <h3>Learn Flutter</h3>
+            <ul>
+              <a href="#">Learning of journey</a>
+              <a href="#">Codelabs</a>
+              <a href="#">Samples</a>
+            </ul>
+          </div>
+          <div class="footer-links__item">
+            <h3>Legal</h3>
+            <ul>
+              <a href="#">Team and services</a>
+              <a href="#">Code of cinduct</a>
+              <a href="#">FAQ</a>
+            </ul>
+          </div>
+          <div class="footer-links__item">
+            <h3>Learn Flutter</h3>
+            <p>
+              Join our newsletter to receive tutorials, articles and podcasts on
+              web design and programming.
+            </p>
+            <div>
+              <input type="text" placeholder="Your email address">
+              <button>Sign up</button>
+            </div>
+          </div>
         </div>
       </div>
       <div class="footer-copyright">
@@ -134,16 +178,16 @@
           </p>
           <div>
             <a href="#">
-              <img src="assets/10.svg" alt="icon">
+              <img src="assets/10.svg" alt="icon" />
             </a>
             <a href="#">
-              <img src="assets/26.svg" alt="icon">
+              <img src="assets/26.svg" alt="icon" />
             </a>
             <a href="#">
-              <img src="assets/28.svg" alt="icon">
+              <img src="assets/28.svg" alt="icon" />
             </a>
             <a href="#">
-              <img src="assets/30.svg" alt="icon">
+              <img src="assets/30.svg" alt="icon" />
             </a>
           </div>
         </div>
