--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
         </div>
       </div>
     </div>
+    <div class="join">
+      <div class="join__container">
+        <img class="join-illustration" src="assets/31.svg" alt="illustration">
+        <h2>Join our newsletter</h2>
+        <p>Join our newsletter to receive tutorials, articles and podcasts on web design and programming.</p>
+        <div class="join-subscribe">
+          <input type="text" placeholder="Enter your email address" />
+          <button>Sign up</button>
+        </div>
+      </div>
+    </div>
     <footer class="footer">
       <div class="footer-links">
         <div class="footer__container">
@@ -172,7 +183,7 @@
       <div class="footer-copyright">
         <div class="footer__container">
           <p>
-            © 2022 - 2023 Flutter Cameroon. All rigths reserved - Design by
+            © 2019 - 2022 Flutter Cameroon. All rigths reserved - Design by
             <a href="https://twitter.com/mbagnajohan">MBAGNA Johan</a> - Coded
             by <a href="https://leonelngoya.com">Leonel NGOYA</a>
           </p>
