--- a/index.html
+++ b/index.html
@@ -116,11 +116,35 @@
         </div>
       </div>
     </div>
+    <div class="partner">
+      <div class="partner__container">
+        <div class="partner-text">
+          <h3>Partners</h3>
+          <p>
+            A very big thank you to all our partners for their continued
+            partnership. If you’re interested in being showcased throughout
+            Flutter Cameroon, contact <a href="mailto:sponsor@fluttercm.dev">sponsor@fluttercm.dev</a> to
+            discuss sponsorship opportunities.
+          </p>
+          <a href="#"> Become a partner </a>
+        </div>
+        <div class="partner-logos">
+          <img src="assets/8.svg" alt="logo">
+          <img src="assets/14.svg" alt="logo">
+          <img src="assets/15.svg" alt="logo">
+          <img src="assets/16.svg" alt="logo">
+          <img src="assets/5.svg" alt="logo">
+        </div>
+      </div>
+    </div>
     <div class="join">
       <div class="join__container">
-        <img class="join-illustration" src="assets/31.svg" alt="illustration">
+        <img class="join-illustration" src="assets/31.svg" alt="illustration" />
         <h2>Join our newsletter</h2>
-        <p>Join our newsletter to receive tutorials, articles and podcasts on web design and programming.</p>
+        <p>
+          Join our newsletter to receive tutorials, articles and podcasts on web
+          design and programming.
+        </p>
         <div class="join-subscribe">
           <input type="text" placeholder="Enter your email address" />
           <button>Sign up</button>
@@ -142,11 +166,11 @@
             </ul>
             <div>
               <a href="#">
-                <img src="assets/25.svg" alt="icon">
+                <img src="assets/25.svg" alt="icon" />
                 <span>Slack</span>
               </a>
               <a href="#">
-                <img src="assets/27.svg" alt="icon">
+                <img src="assets/27.svg" alt="icon" />
                 <span>Telegram</span>
               </a>
             </div>
@@ -174,7 +198,7 @@
               web design and programming.
             </p>
             <div>
-              <input type="text" placeholder="Your email address">
+              <input type="text" placeholder="Your email address" />
               <button>Sign up</button>
             </div>
           </div>
