--- a/index.html
+++ b/index.html
@@ -123,17 +123,65 @@
           <p>
             A very big thank you to all our partners for their continued
             partnership. If you’re interested in being showcased throughout
-            Flutter Cameroon, contact <a href="mailto:sponsor@fluttercm.dev">sponsor@fluttercm.dev</a> to
+            Flutter Cameroon, contact
+            <a href="mailto:sponsor@fluttercm.dev">sponsor@fluttercm.dev</a> to
             discuss sponsorship opportunities.
           </p>
           <a href="#"> Become a partner </a>
         </div>
         <div class="partner-logos">
-          <img src="assets/8.svg" alt="logo">
-          <img src="assets/14.svg" alt="logo">
-          <img src="assets/15.svg" alt="logo">
-          <img src="assets/16.svg" alt="logo">
-          <img src="assets/5.svg" alt="logo">
+          <img src="assets/8.svg" alt="logo" />
+          <img src="assets/14.svg" alt="logo" />
+          <img src="assets/15.svg" alt="logo" />
+          <img src="assets/16.svg" alt="logo" />
+          <img src="assets/5.svg" alt="logo" />
+        </div>
+      </div>
+    </div>
+    <div class="articles">
+      <div class="articles__container">
+        <div class="articles-text">
+          <h2>Discover popular articles</h2>
+          <p>
+            These articles review the latest news about the Framework, but also
+            feedback on our business. <br> Discover the most popular articles shared
+            by members of the community.
+          </p>
+        </div>
+        <div class="articles-body">
+          <div class="card">
+            <img src="assets/20.png" alt="image" />
+            <div class="card-content">
+              <div>
+                <button>widget</button>
+                <button>features</button>
+              </div>
+              <h4>Introducing Flutter in Focus!</h4>
+              <p>
+                In Flutter, “everything is a widget”! If you want to better
+                understand the two kinds of widgets, Stateless and Stateful, see
+                the following videos,
+              </p>
+              <div>
+                <h5>03 August 2022 - 02 minutes</h5>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <h3>Flutter 3 is available 🔥🔥</h3>
+            <img src="assets/18.png" alt="image" />
+          </div>
+          <div class="card">
+            <h3>Flutter Apprentice Giveaway</h3>
+            <img src="assets/19.png" alt="image" />
+          </div>
+          <div class="card">
+            <h3>How to Create Stateless Widgets - Flutter Widgets 101 Ep. 1</h3>
+            <img src="assets/17.png" alt="image" />
+          </div>
+        </div>
+        <div class="articles-all">
+          <a href="#">See all articles</a>
         </div>
       </div>
     </div>
