--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <h2>Discover popular articles</h2>
           <p>
             These articles review the latest news about the Framework, but also
-            feedback on our business. <br> Discover the most popular articles shared
+            feedback on our business. Discover the most popular articles shared
             by members of the community.
           </p>
         </div>
@@ -182,6 +182,54 @@
         </div>
         <div class="articles-all">
           <a href="#">See all articles</a>
+        </div>
+      </div>
+    </div>
+    <div class="community">
+      <div class="community__container">
+        <div class="community-text">
+          <h2>Community events</h2>
+          <p>
+            Find out about all the virtual and physical events organized by the
+            different communities in each city. Attend events hosted by the
+            global Flutter community and continue to learn more about Flutter.
+          </p>
+        </div>
+        <div class="community-body">
+          <div class="card">
+            <img src="assets/21.png" alt="img" />
+            <h3>Flutter at Google I/O 2022</h3>
+            <p>
+              Dig into Flutter's announcements from I/O, including Flutter 3.
+            </p>
+          </div>
+          <div class="card">
+            <img src="assets/22.png" alt="img" />
+            <h3>FlutterFestival Cameroon</h3>
+            <p>
+              Today is the big day of our #FlutterFestival Cameroon. we expect
+              you massively between 13h and 17h at @ActivSpaces Douala.
+            </p>
+          </div>
+          <div class="card">
+            <img src="assets/24.png" alt="img" />
+            <h3>Flutter Update: App Monetization</h3>
+            <p>
+              Watch Flutter Update to get the latest news about updates to our
+              monetization features.
+            </p>
+          </div>
+          <div class="card">
+            <img src="assets/23.png" alt="img" />
+            <h3>Flutter Interact 2019</h3>
+            <p>
+              Watch Keynotes and Sessions from Flutter Interact in 2019 and
+              check out the photo gallery to see who was there!
+            </p>
+          </div>
+        </div>
+        <div class="community-all">
+          <a href="#">See all events</a>
         </div>
       </div>
     </div>
