--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         </div>
         <div class="articles-body">
           <div class="card">
+            <h3>Introducing Flutter in Focus!</h3>
             <img src="assets/20.png" alt="image" />
             <div class="card-content">
               <div>
@@ -170,14 +171,59 @@
           <div class="card">
             <h3>Flutter 3 is available 🔥🔥</h3>
             <img src="assets/18.png" alt="image" />
+            <div class="card-content">
+              <div>
+                <button>widget</button>
+                <button>features</button>
+              </div>
+              <h4>Introducing Flutter in Focus!</h4>
+              <p>
+                In Flutter, “everything is a widget”! If you want to better
+                understand the two kinds of widgets, Stateless and Stateful, see
+                the following videos,
+              </p>
+              <div>
+                <h5>03 August 2022 - 02 minutes</h5>
+              </div>
+            </div>
           </div>
           <div class="card">
             <h3>Flutter Apprentice Giveaway</h3>
             <img src="assets/19.png" alt="image" />
+            <div class="card-content">
+              <div>
+                <button>widget</button>
+                <button>features</button>
+              </div>
+              <h4>Introducing Flutter in Focus!</h4>
+              <p>
+                In Flutter, “everything is a widget”! If you want to better
+                understand the two kinds of widgets, Stateless and Stateful, see
+                the following videos,
+              </p>
+              <div>
+                <h5>03 August 2022 - 02 minutes</h5>
+              </div>
+            </div>
           </div>
           <div class="card">
             <h3>How to Create Stateless Widgets - Flutter Widgets 101 Ep. 1</h3>
             <img src="assets/17.png" alt="image" />
+            <div class="card-content">
+              <div>
+                <button>widget</button>
+                <button>features</button>
+              </div>
+              <h4>Introducing Flutter in Focus!</h4>
+              <p>
+                In Flutter, “everything is a widget”! If you want to better
+                understand the two kinds of widgets, Stateless and Stateful, see
+                the following videos,
+              </p>
+              <div>
+                <h5>03 August 2022 - 02 minutes</h5>
+              </div>
+            </div>
           </div>
         </div>
         <div class="articles-all">
@@ -259,6 +305,7 @@
               <a href="#">Podcasts</a>
               <a href="#">Jobs</a>
               <a href="#">Branding</a>
+              <button>🇬🇧 English</button>
             </ul>
             <div>
               <a href="#">
